fix(frontend): admin panel table loading screen overlaps header (#236)

--- a/frontend/src/styles/Header.module.css
+++ b/frontend/src/styles/Header.module.css
@@ -1,7 +1,7 @@
 .header {
   position: sticky;
   top: 0;
-  z-index: 99;
+  z-index: 401;
   background-color: var(--mantine-color-default);
   border-bottom: rem(1px) solid var(--mantine-color-default-border);
   padding: rem(10px) rem(10px);
@@ -25,4 +25,8 @@
     width: 8rem;
     height: 90%;
   }
+}
+
+.systemAdminMenuDropdown {
+  z-index: 402 !important;
 }
